2006/02/11	muppetman

	* GObject.xs: SvLEN() is the length of the SV's buffer; SvCUR() is
	the length of the SV's string.  Use SvCUR() instead of SvLEN()-1 in
	_gperl_fetch_wrapper_key(), or we get garbage key names with perl
	5.8.8, resulting in failures in t/f.t related to properties with no
	getter or setter.

2006/01/30	kaffeetisch

	* Glib.pm, NEWS, README: Unstable release 1.115.

2006/01/28	muppetman

	* MakeHelper.pm: Slightly reduce the potentially ludicrous line
	length of the xsdocparse command.

2006/01/22	muppetman

	* GObject.xs: Honor the "don't warn about unregistered subclasses of
	this type" flags.  Use those flags to avoid creating _Unregistered
	names for what are typically private implementation classes.  This
	leaves the method a little misnamed, but oh well.  Updated the pod
	accordingly.  Also remove unused code.

2006/01/22	kaffeetisch

	* AUTHORS, Makefile.PL: Apply a patch from Wim Lewis that makes
	sure we don't use threading stuff if perl isn't configured to
	handle threads.

2006/01/21	muppetman

	* GObject.xs: Hide CLONE from the docs; it's not something user
	code should call.

2006/01/18	kaffeetisch

	* GObject.xs: Modify the MAKE_UNDEAD and REVIVE_UNDEAD macros so
	no casts are needed when using them.

2006/01/18	kaffeetisch

	* Glib.pm: Fix a typo.

2006/01/16	kaffeetisch

	* Glib.pm, NEWS, README: Unstable release 1.114.

2006/01/16	kaffeetisch

	* GObject.xs: Apply patch from Rafael Garcia-Suarez that fixes the
	undead object macros on 64-bit platforms.

2006/01/16	kaffeetisch

	* GObject.xs (class_info_finish_loading): Hush a compiler warning.

2006/01/16	kaffeetisch

	* GLog.xs (gperl_log_handler): Add a comment describing a rare
	threading-related crash.

2006/01/15	muppetman

	* Glib.pm, GObject.xs, GType.xs: Change the way GObject type
	mappings are initialized.

	Previously, gperl_register_object() would not only map a GType to a
	perl package name, but would set up the @ISA entry for that type by